sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sonarqube
  template:
    metadata:
      name: sonarqube
      labels:
        name: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:8.2-community
          ports:
            - name: sonarqube
              containerPort: 9000
          resources:
            requests:
              memory: 2000Mi
            limits:
              memory: 2000Mi
