sonarqube-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      name: sonarport
  selector:
    name: sonarqube
