sonarqube-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-loadbalance-service
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      name: sonarport
  selector:
    name: sonarqube
