sonarqube-postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonar-postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: sonarqube-postgres
  ports:
    - port: 5432
      targetPort: 5432
